# MsfOwlClock

./: .gitattributes  LICENSE  README.md
src/firmware/debug/: .gitignore  README.md  blinky-blinky.cc  build.sh  meson.build  msf-owl-clock.code-workspace
src/firmware/debug/kernel/: IInitialisable.hh  _entrypoint.cc  whatever.cc
src/firmware/debug/kernel/bare-metal/: Register.hh
src/firmware/debug/kernel/crt/: BssMemorySection.hh  Entrypoint.hh  ILinkerMemoryMap.hh  IResetMcu.hh  _exit.cc  abort.cc
src/firmware/debug/src/: app-config.hh  kernel-config.hh
src/firmware/debug/src/app/: blinky-blinky.cc
src/firmware/debug/src/apps/debug/: BlinkyBlinkyTask.cc  NopTask.cc  blinky-blinky.cc
src/firmware/debug/src/config/: Tasks.hh
src/firmware/debug/src/kernel/: ChainedFinalisation.hh  ChainedInitialisation.hh  CurrentTaskSyscallApi.hh  DefaultApiFactory.hh  DefaultPerCoreApiFactory.hh  Exception.hh  IAppTaskApi.hh  IAppToDriverApi.hh  IConstFinalisable.hh  IConstInitialisable.hh  IDriverToDriverApi.hh  IDriverToKernelApi.hh  IFinalisable.hh  IHandleSyscall.hh  IHaveRequiredApis.hh  IInitialisable.hh  IMcuCoreTraits.hh  INonConstFinalisable.hh  INonConstInitialisable.hh  IStaticVoidRunnable.hh  ISyscall.hh  ISyscallHandlerContext.hh  IntegerSequenceUtilities.hh  KernelPerCoreInitialisationTask.hh  _entrypoint.cc  mcu-defs.hh
src/firmware/debug/src/kernel/bare-metal/: BitfieldTraits.hh  Bitmask.hh  IHaveValuesOf.hh  IntegerSequence.hh  OffsetIntegerSequence.hh  Register.hh
src/firmware/debug/src/kernel/config/: IHaveMcuCoreTraits.hh  IHaveTupleOfKernelConfigs.hh  IKernelConfig.hh  ITupleOfKernelConfigs.hh  McuCoreTraitsFrom.hh  PrivateKernelConfig.hh
src/firmware/debug/src/kernel/crt/: DummyBootloader.hh  Entrypoint.hh  IApplicationLinkerMemoryMap.hh  IBootloader.hh  ICrt0Environment.hh  IKernelLinkerMemoryMap.hh  ILinkerAppMemoryMap.hh  ILinkerApplicationMemoryMap.hh  ILinkerKernelMemoryMap.hh  ILinkerMemoryMap.hh  IResetMcu.hh  InitFiniArray.hh  NoBootloader.hh
src/firmware/debug/src/kernel/crt/crt0/: DefaultCrt0EnvironmentConfig.hh  DefaultCrt0KernelConfig.hh  EntrypointFactory.hh  IsrStackMemorySection.hh  KernelConfigs.hh  McuCoreTraits.hh  McuSingleCoreTraits.hh  crt0-task-stacks.cc
src/firmware/debug/src/kernel/crt/picolibc/: _exit.cc  atexit.cc  sbrk.cc
src/firmware/debug/src/kernel/di/: ConstructorParameters.hh  Container.hh
src/firmware/debug/src/kernel/drivers/: DefaultPerCoreIsrFactory.hh  DriverTaskApis.hh  IDriverTask.hh  IDriverTaskApi.hh  IIsr.hh  IIsrApi.hh  ISyscallApi.hh  IsrApis.hh  SyscallApis.hh
src/firmware/debug/src/kernel/drivers/config/: DriverConfigsFrom.hh  DriverIsrConfigsFrom.hh  DriverProvidedIsrConfigsFrom.hh  IDriverConfig.hh  IHaveConfigForDriver.hh  IHaveConfigForDriverApis.hh  IHaveConfigForDrivers.hh  IHaveConfigForProvidedApis.hh  IHaveConfigForProvidedIsrs.hh  IHaveConfigForProvidedSyscalls.hh  IHaveConfigForSyscall.hh  IHaveConfigForSyscalls.hh  IProvidedApiConfig.hh  IProvidedIsrConfig.hh  IProvidedSyscallConfig.hh  ITupleOfDriverConfigs.hh  ITupleOfProvidedApiConfigs.hh  ITupleOfProvidedIsrConfigs.hh  ITupleOfProvidedSyscallConfigs.hh  IsrOrDefaultByIrqFrom.hh  IsrWithDefaultTrampoline.hh  NakedToPerCoreIsrAdapter.hh  ProvidedIsrConfigsFrom.hh  RequiredDriverConfigsFrom.hh
src/firmware/debug/src/kernel/drivers/kernel/: README.md
src/firmware/debug/src/kernel/drivers/peripherals/: README.md
src/firmware/debug/src/kernel/integer-sequences/: BubbleSorted.hh  SortedSet.hh  Unique.hh  utilities.hh
src/firmware/debug/src/kernel/public/: config.hh
src/firmware/debug/src/kernel/tasks/: AppTaskApis.hh  AppToDriverApis.hh  DefaultApiFactory.hh  DefaultIdleTask.hh  DefaultTaskFactory.hh  DefaultTaskStack.hh  DriverToDriverApis.hh  DriverToKernelApis.hh  IAppTask.hh  IAppTaskApi.hh  IAppToDriverApi.hh  IDriverToDriverApi.hh  IDriverToKernelApi.hh  IHandleAbnormalTaskExits.hh  ITask.hh  TaskLifecycle.hh
src/firmware/debug/src/kernel/tasks/config/: IHaveAssociatedConfigForTaskStack.hh  IHaveConfigForTask.hh  IHaveConfigForTaskStack.hh  IHaveConfigForTasks.hh  ITaskConfig.hh  ITupleOfTaskConfigs.hh  RequiredApisFrom.hh  ResourceToTaskAssociation.hh  TaskConfigToResourceAssociation.hh  TaskConfigsFrom.hh  TaskStackConfigToRamBlock.hh  TaskStackConfigsFrom.hh  TaskStackNumberOfSlotsFor.hh  TaskStackRamBlock.hh  TaskStacksFrom.hh  TasksFrom.hh  dsl.hh
src/firmware/debug/src/kernel/tuples/: AsTuple.hh  TupleCat.hh  TupleIndexZip.hh  TupleProjection.hh  Unique.hh
src/firmware/debug/tests/unit/: CallRecorder.hh  IntegerSequenceUtilities.hh  NonDeterminism.cc  NonDeterminism.hh  TupleUtilities.hh  TypeUtilities.hh  ViewUtilities.hh  mettle.cc
src/firmware/debug/tests/unit/app/: NoddyAppTest.cc
src/firmware/debug/tests/unit/apps/: NoddyAppTest.cc
src/firmware/debug/tests/unit/kernel/: ChainedFinalisationTest.cc  ChainedInitialisationTest.cc  ConstInitialisableTest.cc  DefaultApiFactoryTest.cc  DefaultPerCoreApiFactoryTest.cc  FinalisableTestDoubles.hh  IHaveRequiredApisTest.cc  IMcuCoreTraitsTest.cc  InitialisableTest.cc  InitialisableTestDoubles.hh  IntegerSequenceUtilitiesTest.cc  MockConstFinalisable.hh  MockConstInitialisable.hh  MockNonConstFinalisable.hh  MockNonConstInitialisable.hh  NoddyKernelTest.cc  NonConstInitialisableTest.cc
src/firmware/debug/tests/unit/kernel/bare-metal/: BitfieldTraitsTest.cc  BitmaskTest.cc  IntegerSequenceTest.cc  OffsetIntegerSequenceTest.cc
src/firmware/debug/tests/unit/kernel/config/: IHaveMcuCoreTraitsTest.cc  IHaveTupleOfKernelConfigsTest.cc  IKernelConfigTest.cc  ITupleOfKernelConfigsTest.cc  McuCoreTraitsFromTest.cc
src/firmware/debug/tests/unit/kernel/crt/: BootloaderSubstitute.hh  BootloaderTestDoubles.hh  Crt0EnvironmentSubstitute.hh  Crt0EnvironmentTestDoubles.hh  EntrypointTest.cc  LinkerAppMemoryMapSubstitute.hh  LinkerAppMemoryMapTestDoubles.hh  LinkerKernelMemoryMapSubstitute.hh  LinkerKernelMemoryMapTestDoubles.hh  LinkerMemoryMapSubstitute.hh  LinkerMemoryMapTestDoubles.hh
src/firmware/debug/tests/unit/kernel/di/: ConstructorParametersTest.cc  ContainerTest.cc
(+413 files in other folders)
